# ChangeLog for sys-cluster/lam-mpi
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.63 2007/07/02 15:32:12 peper Exp $

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> lam-mpi-7.1.2.ebuild:
  (QA) RESTRICT clean up.

  21 May 2007; Jeroen Roovers <jer@gentoo.org> lam-mpi-7.1.2.ebuild:
  Stable for HPPA (bug #178510).

  18 May 2007; Raúl Porcel <armin76@gentoo.org> lam-mpi-7.1.2.ebuild:
  ia64 stable

  27 Apr 2007; Jeroen Roovers <jer@gentoo.org> lam-mpi-7.1.2.ebuild:
  Marked ~hppa.

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  lam-mpi-7.1.2.ebuild:
  ppc stable, bug #157799

  31 Mar 2007; Raúl Porcel <armin76@gentoo.org> lam-mpi-7.1.2.ebuild:
  Add ~ia64

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  10 Feb 2007; Steve Dibb <beandog@gentoo.org> lam-mpi-7.1.2.ebuild:
  amd64 stable, bug 157799

  28 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> lam-mpi-7.1.2.ebuild:
  Stable on sparc wrt #157799

  06 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>; lam-mpi-7.1.2.ebuild:
  Stop PROVIDEing mpi virtual, we're on a new-style virtual now.

  06 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>; lam-mpi-7.0.4.ebuild,
  lam-mpi-7.0.6.ebuild, lam-mpi-7.1.2.ebuild:
  Block all MPI providers.

  06 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  -files/lam-mpi-7.1.1-shared-romio.patch, -lam-mpi-7.0.4-r1.ebuild,
  -lam-mpi-7.1.ebuild, -lam-mpi-7.1.1-r3.ebuild:
  Clean up.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> lam-mpi-7.1.2.ebuild:
  Stable on ppc64

  26 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; lam-mpi-7.1.2.ebuild:
  Stable on x86.

  26 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/7.1.2-liblam-use-extra-libs.patch, lam-mpi-7.1.2.ebuild: