@@ -1,6 +1,8 @@
 AUX 7.1.2-lam_prog_f77.m4.patch 529 RMD160 1693107a9e2fa7fbef0e6b59f082ab8082a61522 SHA1 263b63c1ca7a32621338e54bcf98cee8e4345eb6 SHA256 5164b1f5d6abffc93f1ec113ca1711e34938246d9d3f43318375ecc90201bf9b
 AUX 7.1.2-liblam-use-extra-libs.patch 490 RMD160 f52c0c3490a5d7dd9fa3993032c64c5fd7ef4295 SHA1 dad163d483a8a35cf4cb3a5cb7c572e7f21fabf8 SHA256 580a84ef0364d9ea9bf204024906d18b7b00338e48cfafdc04f2d82d9c4b6870
 DIST lam-7.1.2.tar.bz2 7851483 RMD160 4aeb62d41dc0b6f910424feb1046c6925bd620c4 SHA1 fa0c3278f9420b218fa7a4ef9b052ec6d93baa0c SHA256 b3826e79f1a674ed275d2a0e32895aefe63d4278126bd5fa01dbe43cc1c1960b
-EBUILD lam-mpi-7.1.2.ebuild 2654 RMD160 d6d888905a09abbd8439a36a308e752409d833f8 SHA1 31b241bc3102b75fc424ed5635276e82a9399cb5 SHA256 9295a6664809879b62491d6444e1cb5560bf34da8f7d2c8a70055e3bf6eafa85
-MISC ChangeLog 10328 RMD160 8199d044e6a8cbfcf10fbd56dbc6d97545658f34 SHA1 10a5cc2329dc6c446b2cc0790df063a8c09f8e1c SHA256 5e2a8bd897c3d6cc99aa8cbf71e7eef65f93ec88f4ad453311af57e9b148905d
+DIST lam-7.1.4.tar.bz2 7865813 RMD160 6c9c6338391472d4cd2572c409cb92360e7fd799 SHA1 ce8a983004f31d5960d34efe3ed9ac489e9dfc9d SHA256 d66c205f57d9ffc38dbfb81faef8b586ef2b9e08853034c0472ef4ae45803d2e
+EBUILD lam-mpi-7.1.2.ebuild 2672 RMD160 953ac941f4b1f9b2c73406b703a3867d7183b849 SHA1 ae6462ff63c067c3b9b46f0efc50e3f4eae3a7d3 SHA256 24f6a425cc80891c78717888596c447d95f30512d5a847cde5231040a90bd001
+EBUILD lam-mpi-7.1.4.ebuild 3403 RMD160 3a2f8bd1021c523833da384c2ce83c2bec88e958 SHA1 256f1b4b534f4c22466718b568e8dea19ac2704d SHA256 c8975fd699d06f7764cdab8a900967215cf5f428b4c05eb9e0c80fc404bcfd34
+MISC ChangeLog 10687 RMD160 8f31ea9cb6acf34b2a512e638c7c3b6557737b92 SHA1 c935e9c351070935598f0b8edbc0549ea7b4a0ab SHA256 4f132fe0b04864465520d9b92589b72c913d79402001df9404e240c33c7aee29
 MISC metadata.xml 163 RMD160 ea1530cd45b9e04e8693261b9a94b5988e4b09a1 SHA1 443b7a3d8fb76c8d20647b165032ad358bfa3b6a SHA256 5a03bf3074b07158dffe793af69f7b0cd1e5c785537574713f9a7978032363a3
